--- a/index.html
+++ b/index.html
@@ -3,11 +3,76 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Landing page</title>
 </head>
 
 <body>
-    
+    <div class="header">
+        <div class="navbar">
+            <div class="header-logo">Header Logo</div>
+            <div class="links">
+                <ul>
+                    <li><a>header link one</a></li>
+                    <li><a>header link two</a></li>
+                    <li><a>header link three</a></li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="section-1">
+            <div class="main-sec">
+            <div class="main-text">This website is awesome!</div>
+            <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is a lower contrast.</p>
+            <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank"><button>Sign up</button></a>
+            </div>
+
+            <div class="placeholder">this is a placeholder for an image</div>
+        </div>
+    </div>
+
+    <div class="info">
+        <div class="header-text">Some random information.</div>
+        <div class="containers">
+            <div class="inside">
+            <div class="container"></div>
+            <p class="text">this is some subtext under an illustration or image.</p>
+            </div>
+            <div class="inside">
+            <div class="container"></div>
+            <p class="text">this is some subtext under an illustration or image.</p>
+            </div>
+            <div class="inside">
+            <div class="container"></div>
+            <p class="text">this is some subtext under an illustration or image.</p>
+            </div>
+            <div class="inside">
+            <div class="container"></div>
+            <p class="text">this is some subtext under an illustration or image.</p>
+            </div>
+        </div>
+    </div>
+
+    <div class="testimonial">
+        <div class="space-text">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</div>
+        <div class="person">-Thor, someone</div>
+    </div>
+
+    <div class="action">
+        <div class="time">
+            <div class="call">
+                <div class="call-to-action">Call to action! It's time!</div>
+                <p class="product">Sign up for our product by clicking that button right over there!</p>
+            </div>
+            <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank"><button class="up">Sign up</button></a>
+        </div>
+    </div>
+
+    </div>
+
+    <div class="footer">
+        <div>Copyright © The Odin Project 2023</div>
+    </div>
 </body>
 
 </html>
